--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-simple-chat": "^1.1.4",
+    "react-simple-chatbot": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
